--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>flyway-mysql</artifactId>
             <version>11.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
